# rocket-polls

./: README.md
polls/: Cargo.toml  Rocket.toml  diesel.toml
polls/migrations/2024-07-26-235813_create_questions/: down.sql  up.sql
polls/migrations/2024-07-27-000256_create_choices/: down.sql  up.sql
polls/migrations/2024-07-27-211718_pub_date_to_published/: down.sql  up.sql
polls/src/: lib.rs  main.rs  polls.rs  schema.rs
polls/templates/polls/: detail.html.tera  list.html.tera
