[package]
name = "polls"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.2", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.204", features = ["derive"] }
